# clip-demo

./: README.md  debug_training.py  main.py  pyproject.toml  run_train.bat  test_clip_compliance.py  test_inference.py  test_model.py
data/: train.csv  val.csv
lightning_logs/version_11/: hparams.yaml  metrics.csv
lightning_logs/version_12/: hparams.yaml  metrics.csv
lightning_logs/version_13/: hparams.yaml
lightning_logs/version_2/: hparams.yaml
lightning_logs/version_5/: hparams.yaml
lightning_logs/version_7/: metrics.csv
lightning_logs/version_9/: hparams.yaml  metrics.csv
notebook/: clip_tutorial.ipynb
script/: evaluate.py  generate_synthetic_data.py  inference.py  train.py
src/: bpe_tokenizer.py  clip_layers.py  dataset.py  image_encoder.py  loss.py  model.py  resnet_encoder.py  text_encoder.py  trainer.py  utils.py
